--- a/src/app/components/snail/snail.component.html
+++ b/src/app/components/snail/snail.component.html
@@ -1,4 +1,5 @@
 <mat-card>
+  <form class="example-form">
     <mat-form-field class="example-full-width">
       <input matInput type="number" min="" placeholder="Well Height" [formControl]="wellHeight">
     </mat-form-field>
