fix nav routerLinks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <mat-toolbar>Snail App
   <nav>
     <button mat-button routerLink="">Home</button>
-    <button mat-button routerLink="snail-form">Snail</button>
-    <button mat-button routerLink="login-form">Login</button>
+    <button mat-button routerLink="snail">Snail</button>
   </nav>
 
 </mat-toolbar>
