--- a/src/app/components/snail/snail.component.html
+++ b/src/app/components/snail/snail.component.html
@@ -17,7 +17,7 @@
       <input matInput type="number" placeholder="Fatigue" [formControl]="fatigue">
     </mat-form-field>
 
-    <button mat-button (click)="solveProblem()">Solve</button>
+    <button mat-button (click)="onClickSolve()">Solve</button>
     <h1 class="">{{result}}</h1>
   </form>
 </mat-card>
