--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "theme/theme.scss";
+
+body {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
