--- a/src/app/components/snail/snail.component.scss
+++ b/src/app/components/snail/snail.component.scss
@@ -17,6 +17,26 @@
       form {
         display: flex;
         flex-direction: column;
+
+        button {
+          margin-bottom: 1em;
+        }
+      }
+
+      .error {
+        color: #ff6e40;
+        margin-bottom:.5em;
+      }
+
+      code {
+        background: rgba(0,0,0,.05);
+        border-radius: 5px;
+        box-shadow: inset 0 2px 5px rgba(0,0,0,.25);
+        padding: 0 15px;
+
+        .code-comment {
+          opacity: .5;
+        }
       }
     }
   }
