--- a/src/app/modules/metrics/average-success/average-success.component.html
+++ b/src/app/modules/metrics/average-success/average-success.component.html
@@ -4,10 +4,13 @@
   </mat-card-header>
   <mat-card-content>
     <ng-container [ngSwitch]="isLoading">
+
       <div *ngSwitchCase="true" class="loading-container">
         <mat-spinner diameter="30"></mat-spinner>
       </div>
+
       <div [chart]="chart" *ngSwitchCase="false"></div>
+
     </ng-container>
   </mat-card-content>
 </mat-card>
@@ -21,6 +24,7 @@
       <div *ngSwitchCase="true" class="loading-container">
         <mat-spinner diameter="30"></mat-spinner>
       </div>
+      <p *ngIf="true">No data to show. Go to "snail" to start collecting data.</p>
       <div [chart]="chart2" *ngSwitchCase="false"></div>
     </ng-container>
   </mat-card-content>
