--- a/src/app/modules/metrics/average-success/average-success.component.scss
+++ b/src/app/modules/metrics/average-success/average-success.component.scss
@@ -7,6 +7,10 @@
     justify-content: space-around;
   }
 
+  mat-card-content {
+    margin: 0 16px;
+  }
+
   mat-card:not(:first-child) {
     margin-top: 20px;
   }
