--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,48 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Curtis Blanchette</mat-card-title>
-    <mat-card-subtitle>Developer Screening Submission</mat-card-subtitle>
-  </mat-card-header>
-</mat-card>
+<div class="container">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Curtis Blanchette</mat-card-title>
+      <mat-card-subtitle>Developer Screening Submission</mat-card-subtitle>
+    </mat-card-header>
+
+    <mat-card-content>
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Register</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <form class="register-form" [formGroup]="registerForm">
+            <mat-form-field class="example-full-width">
+              <input matInput type="text" min="0" max="100" placeholder="Username" formControlName="username">
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <input matInput type="password" min="0" max="100" placeholder="Password" formControlName="password">
+            </mat-form-field>
+            <button mat-button mat-flat-button color="primary" [disabled]="!registerForm.valid" (click)="register()">Register</button>
+          </form>
+        </mat-card-content>
+      </mat-card>
+      <div class="divider">- Or -</div>
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Login</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <form class="login-form" [formGroup]="loginForm">
+            <mat-form-field class="example-full-width">
+              <input matInput type="text" min="0" max="100" placeholder="Username" formControlName="username">
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <input matInput type="password" min="0" max="100" placeholder="Password" formControlName="password">
+            </mat-form-field>
+            <button mat-button mat-flat-button color="primary" [disabled]="!loginForm.valid" (click)="login()">Login</button>
+          </form>
+        </mat-card-content>
+      </mat-card>
+
+    </mat-card-content>
+  </mat-card>
+
+
+
+</div>
