--- a/src/app/modules/metrics/average-success/average-success.component.html
+++ b/src/app/modules/metrics/average-success/average-success.component.html
@@ -17,15 +17,37 @@
 
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Total Average Distance</mat-card-title>
+    <mat-card-title>Averages</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <ng-container [ngSwitch]="isLoading">
       <div *ngSwitchCase="true" class="loading-container">
         <mat-spinner diameter="30"></mat-spinner>
       </div>
-      <p *ngIf="true">No data to show. Go to "snail" to start collecting data.</p>
-      <div [chart]="chart2" *ngSwitchCase="false"></div>
+      <table *ngSwitchCase="false" mat-table [@enterTrigger]="'fadeIn'" [dataSource]="[results]" class="mat-elevation-z0">
+
+        <!-- Time Column -->
+        <ng-container matColumnDef="averageDistance">
+          <th mat-header-cell *matHeaderCellDef> Total Distance Climbed  </th>
+          <td mat-cell *matCellDef="let element"> {{element.averageTotalDistanceClimbed}} </td>
+        </ng-container>
+
+        <!-- Method Column -->
+        <ng-container matColumnDef="averageSuccessDays">
+          <th mat-header-cell *matHeaderCellDef> Days to Succeed </th>
+          <td mat-cell *matCellDef="let element"> {{element.averageTime.averageSuccessDays}} </td>
+        </ng-container>
+
+        <!-- Endpoint Column -->
+        <ng-container matColumnDef="averageFailureDays">
+          <th mat-header-cell *matHeaderCellDef> Days to Fail </th>
+          <td mat-cell *matCellDef="let element"> {{element.averageTime.averageFailureDays}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      </table>
     </ng-container>
   </mat-card-content>
 </mat-card>
