--- a/src/app/modules/metrics/average-success/average-success.component.html
+++ b/src/app/modules/metrics/average-success/average-success.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-header>
+  <mat-card-header class="success-rate-card">
     <mat-card-title>Success Rate</mat-card-title>
   </mat-card-header>
   <mat-card-content>
@@ -15,7 +15,7 @@
   </mat-card-content>
 </mat-card>
 
-<mat-card>
+<mat-card class="averages-card">
   <mat-card-header>
     <mat-card-title>Averages</mat-card-title>
   </mat-card-header>
@@ -34,13 +34,13 @@
 
         <!-- Method Column -->
         <ng-container matColumnDef="averageSuccessDays">
-          <th mat-header-cell *matHeaderCellDef> Days to Succeed </th>
+          <th mat-header-cell *matHeaderCellDef> Days to Success </th>
           <td mat-cell *matCellDef="let element"> {{element.averageTime.averageSuccessDays | oneDecimalPlace}} </td>
         </ng-container>
 
         <!-- Endpoint Column -->
         <ng-container matColumnDef="averageFailureDays">
-          <th mat-header-cell *matHeaderCellDef> Days to Fail </th>
+          <th mat-header-cell *matHeaderCellDef> Days to Failure </th>
           <td mat-cell *matCellDef="let element"> {{element.averageTime.averageFailureDays | oneDecimalPlace }} </td>
         </ng-container>
 
