--- a/src/app/components/snail/snail.component.scss
+++ b/src/app/components/snail/snail.component.scss
@@ -7,8 +7,7 @@
 
     mat-card {
       width: 500px;
-      margin-top: 1em;
-
+      margin-top: 20px;
 
       mat-card-content {
         margin: 0 16px;
