add submission details to home component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,44 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Curtis Blanchette</mat-card-title>
-    <mat-card-subtitle>Developer Screening Submission</mat-card-subtitle>
-  </mat-card-header>
-</mat-card>
+<div class="container">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Curtis Blanchette</mat-card-title>
+      <mat-card-subtitle>Developer Screening Submission</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <h2>Submission Details:</h2>
+
+      <h3>Frontend:</h3>
+      <ul>
+        <li>Angular 7</li>
+        <li>Eagerly loaded components
+          <ul>
+            <li>Home</li>
+            <li>Snail</li>
+          </ul>
+        </li>
+        <li>Lazy loaded module
+          <ul>
+            <li>Metrics</li>
+          </ul>
+        </li>
+        <li>Custom pipe for transforming display data</li>
+        <li>Clear separation of data, presentation layers</li>
+        <li>Modularized for performance</li>
+        <li>Metrics for:
+            <ul>
+              <li>Request logs</li>
+              <li>Number of Successes/Failuers</li>
+              <li>Aggregate result averages:
+                <ul>
+                  <li>Total distance climbed</li>
+                  <li>Days to success</li>
+                  <li>Days to failure</li>
+                </ul>
+              </li>
+            </ul>
+        </li>
+      </ul>
+    </mat-card-content>
+  </mat-card>
+</div>
+
